test/pass/test_import/import_depended.sest
module ImportDepended = struct

  val hello() =
    "Hello"

end
