test/fail/error_contradiction.sest
module ErrorContradiction = struct

  val add(x, y) = x + y

  val main() = add("foo", 42)

end
